	Glen Marchesani
	Mathias Muller
	Peter Oxenham
	Emmanuel Pellereau
	Roshan Punnoose
	Jean-Baptiste Quenot
	Damon Rand
	Geoff Reedy
	Christian Riege
	Andreas Sahlbach
	John Shields
	Johan Stuyts
	Jason Trump
	Tjeerd Verhagen
	John Williams
	Jaroslaw Wypychowski

   version in SVN
=====================================
- NEW: Introduce RepositoryManagementEngine (IVY-665 - not completed yet)

- IMPROVEMENT: Make IBiblio resolver compatible with maven proxy (IVY-466)
- IMPROVEMENT: Use namespace aware validation (IVY-553)
- IMPROVEMENT: use ModuleRevisionId instead of ModuleId in IvySettings#getResolver (IVY-691)
- IMPROVEMENT: Flexible cache management (IVY-399 - not completed yet)
- IMPROVEMENT: Decrease memory footprint (IVY-662)
- IMPROVEMENT: Downgrade Ant version requirement to 1.6 to build Ivy (IVY-687)

- FIX: Problem with cached Ivy files which have extra attributes (IVY-693)
- FIX: Detection of newer and better artifacts should not happen if 'checkModified' is set to 'false' (IVY-389) (with contribution from Johan Stuyts)
- FIX: Ivy doesn't respect the order of the ivy patterns as defined in the settings (IVY-676)
- FIX: XmlModuleDescriptorWriter doesn't write the deprecated attribute of the "ivy-module/configurations/conf" element (IVY-664)
- FIX: XMLModuleDescriptorWriter does not write extra attributes (IVY-471) (with contribution from Mikkel Bjerg)
- FIX: latest compatible conflict manager fails with circular dependencies and dynamic revision (IVY-663)
- FIX: Strict conflictmanager seems to not support dynamic revisions (IVY-474)
- FIX: NPE in namespace transformation during the ivy:findrevision and ivy:resolve task execution (IVY-659) (thanks to Andrea Bernardo Ciddio)
- FIX: Maven test scope includes all runtime dependencies (IVY-682)

- TASK: Remove cache attribute on Ant tasks (IVY-685)

- Improvement in coding conventions (IVY-511) (with contribution from Markus M. May)

   2.0.0-beta1
=====================================