@@ -17,7 +17,6 @@
  */
 package org.apache.ivy.core.settings;
 
-import java.util.Map;
 
 /**
  * Store and provide access to the ivy variables.
@@ -26,11 +25,18 @@ import java.util.Map;
  */
 public interface IvyVariableContainer extends Cloneable {
 
-    public abstract void setVariable(String varName, String value, boolean overwrite);
+    public void setVariable(String varName, String value, boolean overwrite);
 
-    public abstract Map getVariables();
+    public String getVariable(String name);
 
-    public abstract String getVariable(String name);
-
+    /**
+     * Specifies the prefix used to indicate a variable is an environment
+     * variable. If the prefix doesn't end with a '.', it will be added
+     * automatically.
+     * 
+     * @param prefix the prefix to use for the environment variables
+     */
+    public void setEnvironmentPrefix(String prefix);
+    
     public Object clone();
 }
